--- a/App/package.json
+++ b/App/package.json
@@ -9,15 +9,18 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^8.4.2",
+    "@react-native-firebase/auth": "^9.2.2",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
     "expo-status-bar": "^1.0.2",
-    "firebase": "^7.19.1",
+    "firebase": "^7.20.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-firebase": "^2.2.8",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-maps": "0.27.1",
     "react-native-reanimated": "~1.9.0",
