--- a/App/app.json
+++ b/App/app.json
@@ -20,7 +20,18 @@
       "supportsTablet": true
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "config": {
+        "firebase": {
+          "apiKey": "AIzaSyBxYzroSL4Siy-oqWyIRwppdrP9IPzuJGE",
+          "authDomain": "alzhistant-ef445.firebaseapp.com",
+          "databaseURL": "https://alzhistant-ef445.firebaseio.com",
+          "projectId": "alzhistant-ef445",
+          "storageBucket": "alzhistant-ef445.appspot.com",
+          "messagingSenderId": "337237467623",
+          "appId": "1:337237467623:web:0f306913c76b7531d85d42",
+          "measurementId": "G-3K9Z5CC9H8"
+        }
+      }
     }
   }
 }
