--- a/App/app.json
+++ b/App/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Prueba",
-    "slug": "Prueba",
+    "name": "Alzhistant",
+    "slug": "Alzhistant",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
