--- a/App/app.json
+++ b/App/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Prueba",
-    "slug": "Prueba",
+    "name": "Alzhistant",
+    "slug": "Alzhistant",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -21,6 +21,13 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "android": {
+      "permissions": [
+        "LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_FINE_LOCATION"
+      ]
     }
   }
 }
