--- a/App/package.json
+++ b/App/package.json
@@ -23,7 +23,8 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
-    "expo-task-manager": "~8.3.0"
+    "expo-task-manager": "~8.3.0",
+    "expo-background-fetch": "~8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
