--- a/App/package.json
+++ b/App/package.json
@@ -11,8 +11,11 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "base-64": "^0.1.0",
     "expo": "~38.0.8",
+    "expo-background-fetch": "~8.3.0",
     "expo-status-bar": "^1.0.2",
+    "expo-task-manager": "~8.3.0",
     "firebase": "^7.9.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -22,9 +25,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
-    "react-native-web": "~0.11.7",
-    "expo-task-manager": "~8.3.0",
-    "expo-background-fetch": "~8.3.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
